testsuite/tests/interpreter_errors/zero_division_error/test.out
main.adb
script:1:8: error: Zero division
1 | print (84 / 0)
  |        ^^^^^^ 

